Fixed Scaling Issue on Mobile

--- a/styles.css
+++ b/styles.css
@@ -368,6 +368,11 @@ h1 {
     width: 100%;
     overflow: auto;
   }
+
+  div.apiref {
+    max-width: 90%;
+    min-width: 90%;
+  }
 }
 
 @media screen and (max-width: 430px) {
